# alimon_warehouse

./: .env.example  .gitignore  Dockerfile  LICENCSE  Makefile  README.md  docker-compose-local.yaml  docker-compose-test.yaml  docker-compose.yaml  pyproject.toml  work-list.txt
docs/: admin.md
migrations/: env.py
migrations/versions/: 21d90b272c2a_.py  41a4cfc1b202_fix_sku_type.py  64379ab9d4e0_.py
src/: depends.py  main.py  models.py  schemas.py  utils.py
src/conf/: database.py  settings.py
src/routers/: admin_router.py
src/schemas/: auth_schemas.py  filter_schemas.py  product_schemas.py
tests/: conftest.py
tests/admin/: test_products.py
tests/api/: test_products_api.py
